--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,10 @@ node_modules
 .DS_Store
 Thumbs.db
 
-# Env
-.env
-.env.*
-!.env.example
-!.env.test
-
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# nvim
+workspace.vim
+
