--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@sveltejs/adapter-node": "^5.2.9",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@types/bcrypt": "^5.0.2",
+		"@types/node": "^22.10.5",
 		"drizzle-kit": "^0.22.0",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
@@ -25,7 +27,10 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@types/jsonwebtoken": "^9.0.7",
+		"bcrypt": "^5.1.1",
 		"drizzle-orm": "^0.33.0",
+		"jsonwebtoken": "^9.0.2",
 		"postgres": "^3.4.4"
 	}
 }
