create project, fix token refresh

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 	},
 	"dependencies": {
 		"@types/jsonwebtoken": "^9.0.7",
-		"bcrypt": "^5.1.1",
+		"bcryptjs": "^2.4.3",
 		"drizzle-orm": "^0.33.0",
 		"jsonwebtoken": "^9.0.2",
 		"postgres": "^3.4.4"
