--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.7.2",
 		"@types/jsonwebtoken": "^9.0.7",
 		"bcryptjs": "^2.4.3",
 		"drizzle-orm": "^0.33.0",
