--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,15 +26,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Set date tag as a variable
+      # Declare image tag
       - name: Set date tag
-        run: echo "DATE_TAG=$(date +'%Y%m%d')" >> $GITHUB_ENV
+        run: echo "PRD_TAG=prd-$(date +'%Y%m%d')" >> $GITHUB_ENV
 
-      # Build the Docker image with both tags
+      # Build image
       - name: Build Docker image
-        run: docker build -t $DOCKER_REPO:release -t $DOCKER_REPO:$DATE_TAG .
+        run: docker build -t $DOCKER_REPO:$PRD_TAG .
 
-      # Push both tags to Docker Hub
+      # Push image
       - name: Push Docker image
-        run: docker push $DOCKER_REPO:release && docker push $DOCKER_REPO:$DATE_TAG
+        run: docker push $DOCKER_REPO:$PRD_TAG
 
