--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,15 +26,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Declare image tag
-      - name: Set date tag
-        run: echo "PRD_TAG=prd-$(date +'%Y%m%d')" >> $GITHUB_ENV
-
-      # Build image
-      - name: Build Docker image
-        run: docker build -t $DOCKER_REPO:$PRD_TAG .
-
-      # Push image
-      - name: Push Docker image
-        run: docker push $DOCKER_REPO:$PRD_TAG
+      - name: Build, tag, and push
+        run: |
+          DATE_TAG=prd-$(date +'%Y%m%d')
+          docker build -t $DOCKER_REPO:release -t $DOCKER_REPO:$DATE_TAG .
+          docker push $DOCKER_REPO:release && docker push $DOCKER_REPO:$DATE_TAG
 
