--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,22 +4,20 @@ on:
   push:
     branches:
       - master
+      - stg
 
 env:
   DOCKER_REPO: ${{ secrets.DOCKER_USERNAME }}/review-planner
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository code
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          submodules: true
 
-      # Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -28,7 +26,13 @@ jobs:
 
       - name: Build, tag, and push
         run: |
-          DATE_TAG=prd-$(date +'%Y%m%d')
-          docker build -t $DOCKER_REPO:release -t $DOCKER_REPO:$DATE_TAG .
-          docker push $DOCKER_REPO:release && docker push $DOCKER_REPO:$DATE_TAG
+          dt=$(date +'%Y%m%d')
+          if [ $BRANCH_NAME == 'master' ]; then
+            tag=prd-$dt
+          else
+            tag=$BRANCH_NAME-$dt
+          fi
+
+          docker build -t $DOCKER_REPO:$tag .
+          docker docker push $DOCKER_REPO:$tag
 
