--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,7 +33,7 @@ jobs:
             tag=$BRANCH_NAME
           fi
 
-          docker build -t $dateTag -t $DOCKER_REPO:$tag .
+          docker build -t $DOCKER_REPO:$dateTag -t $DOCKER_REPO:$tag .
           docker push $DOCKER_REPO:$dateTag
           docker push $DOCKER_REPO:$tag
 
