--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
+DATABASE_URL="postgres://postgres:mysecretpassword@localhost:54321/local"
 TOKEN_SECRET="secret"
