--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
 DATABASE_URL="postgres://postgres:mysecretpassword@localhost:54321/local"
-TOKEN_SECRET="secret"
+
+AUTH_ISSUER=https://auth.junyi.me/application/o/review-test/
+AUTH_URL=https://auth.junyi.me/application/o/authorize/
+AUTH_TOKEN_URL=https://auth.junyi.me/application/o/token/
+AUTH_USER_URL=https://auth.junyi.me/application/o/userinfo/
+AUTH_LOGOUT_URL=https://auth.junyi.me/application/o/review-test/end-session/
+AUTH_JWKS_URL=https://auth.junyi.me/application/o/review-test/jwks/
+
+APP_HOST=http://localhost:5173
+CLIENT_ID=clientid
+CLIENT_SECRET=clientsecret
+
