--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@types/jsonwebtoken": "^9.0.7",
 		"bcryptjs": "^2.4.3",
 		"drizzle-orm": "^0.33.0",
+		"jose": "^6.0.11",
 		"jsonwebtoken": "^9.0.2",
 		"postgres": "^3.4.4"
 	}
