login, logout flows

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DATABASE_URL="postgres://postgres:mysecretpassword@localhost:54321/local"
 AUTH_ISSUER=https://auth.junyi.me/application/o/review-test/
 AUTH_URL=https://auth.junyi.me/application/o/authorize/
 AUTH_TOKEN_URL=https://auth.junyi.me/application/o/token/
-AUTH_USER_URL=https://auth.junyi.me/application/o/userinfo/
+AUTH_INFO_URL=https://auth.junyi.me/application/o/userinfo/
 AUTH_LOGOUT_URL=https://auth.junyi.me/application/o/review-test/end-session/
 AUTH_JWKS_URL=https://auth.junyi.me/application/o/review-test/jwks/
 
